--- a/VulcanForWindows/UserControls/ClassmatesGrades/SingleClassmateGrades.xaml
+++ b/VulcanForWindows/UserControls/ClassmatesGrades/SingleClassmateGrades.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     xmlns:converters ="using:Converters"
+    xmlns:controls="using:VulcanForWindows.UserControls"
     mc:Ignorable="d">
     <UserControl.Resources>
         <converters:VisibilityConverter x:Key="VisibilityConverter"/>
@@ -32,37 +33,26 @@
                     <TextBlock Text="{x:Bind highestGradeDisplay, Mode=OneWay}"/>
                 </StackPanel>
             </Grid>
-            <StackPanel Visibility="{x:Bind ShouldDisplayChart, Converter={StaticResource VisibilityConverter}, ConverterParameter=True, Mode=OneWay}"
-                   HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="5" Width="540">
-
-                <ImageIcon Source="ms-appx:///Assets/SadGrade.png" VerticalAlignment="Stretch" MaxWidth="64" Foreground="LightGray"/>
-
-                <StackPanel Orientation="Horizontal" Spacing="5" HorizontalAlignment="Center">
-                    <TextBlock Text="Brak wystarczającej ilości danych!" FontWeight="SemiBold" FontSize="24" Foreground="LightGray" TextAlignment="Center"/>
-
-                    <FontIcon Glyph="&#xE946;" FontSize="16" Foreground="LightGray" x:Name="InfoIcon"
-                          FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,0" PointerEntered="FontIcon_PointerEntered" PointerExited="FontIcon_PointerExited"
-                          />
-                </StackPanel>
-                <TextBlock Foreground="LightGray" TextAlignment="Center" TextWrapping="WrapWholeWords">
-                
-                <Run Text="Aby wyświetlić dane dotyczące ocen w klasie wymagane jest min."/>
-                <Run Text="{x:Bind MinGradesAvaibleToShowChart}"/> 
-                <Run Text="(obecnie: "/>
-                <Run Text="{x:Bind GradesAvaible, Mode=OneWay}"/>
-                <Run Text=")"/>
-                <Run Text="udostępnionych wyników w klasie. Poczekaj, aż osoby z twojej klasy uruchomią"/>
-                <Run FontWeight="Bold" Text="VulcanForWindows"/>
-                <Run Text=", a jeśli jeszcze z niego nie korzystają to"/>
-                <Run FontWeight="Bold" Text="zachęć ich do pobrania!"/>
-
-                </TextBlock>
-            </StackPanel>
-            <TeachingTip x:Name="TeachingTipClassmateGrades"
-    Target="{x:Bind InfoIcon}"
-    Title="Oceny na tle klasy"
-    Subtitle="VulcanForWindows zbiera anonimowe dane na temat ocen z każdego sprawdzianiu/kartkówki, aby móc zaprezentować jak wypadłeś/aś na tle klasy.">
-            </TeachingTip>
+            <controls:InfoDisplayControl Mood="Sad" 
+                                         Header="Brak wystarczającej ilości danych!" 
+                                         TeachingTipTitle="Oceny na tle klasy"
+                                         TeachingTipText="VulcanForWindows zbiera anonimowe dane na temat ocen z każdego sprawdzianiu/kartkówki, aby móc zaprezentować jak wypadłeś/aś na tle klasy."
+                                         Visibility="{x:Bind ShouldDisplayChart, Converter={StaticResource VisibilityConverter}, ConverterParameter=True, Mode=OneWay}">
+                <controls:InfoDisplayControl.FrameworkBody>
+                    <TextBlock>
+                    <Run Text="Aby wyświetlić dane dotyczące ocen w klasie wymagane jest min."/>
+                    <Run Text="{x:Bind MinGradesAvaibleToShowChart}"/>
+                    <Run Text="(obecnie: "/>
+                    <Run Text="{x:Bind GradesAvaible, Mode=OneWay}"/>
+                    <Run Text=")"/>
+                    <Run Text="udostępnionych wyników w klasie. Poczekaj, aż osoby z twojej klasy uruchomią"/>
+                    <Run FontWeight="Bold" Text="VulcanForWindows"/>
+                    <Run Text=", a jeśli jeszcze z niego nie korzystają to"/>
+                    <Run FontWeight="Bold" Text="zachęć ich do pobrania!"/>
+                    </TextBlock>
+                </controls:InfoDisplayControl.FrameworkBody>
+            </controls:InfoDisplayControl>
+            
             <TeachingTip x:Name="TeachingTipClassmateGrades2"
     Target="{x:Bind InfoIcon2}"
     Title="Oceny na tle klasy"
