Dodano MonthsAttendaceControl - kontrolkę obecności w widoku kalendarza

--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -54,6 +54,7 @@
                         <NavigationViewItem.MenuItems>
                             <NavigationViewItem Content="Ostatnie" ToolTipService.ToolTip="Wyświetl ostatnie obecności" Tag="AttendancePage"/>
                             <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl podsumowanie frekwencji" Tag="AttendanceReportPage"/>
+                                <NavigationViewItem Content="Kalendarz" ToolTipService.ToolTip="Wyświetl frekwencje w widoku kalendarza" Tag="MonthsAttendancePage"/>
                         </NavigationViewItem.MenuItems>
                     </NavigationViewItem>
                     <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
