Zmieniono MonthsAttendanceControl na własną kontrolkę dla każdego miesiąca, dodano do widżetu w penlu głównym

--- a/VulcanForWindows/UserControls/Widgets/AttendanceWidget.xaml
+++ b/VulcanForWindows/UserControls/Widgets/AttendanceWidget.xaml
@@ -65,5 +65,6 @@
                           IsActive="{x:Bind IsLoading, Mode=OneWay}"/>
         </Grid>
         <lvc:PieChart Series="{Binding seriesRadial}" InitialRotation="270" LegendPosition="Right" LegendTextSize="12" LegendTextPaint="{x:Bind LegendTextPaint}" />
+        <controls:MonthAttendanceControl x:Name="MonthsAttendance" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </FlipView>
 </UserControl>
