--- a/VulcanForWindows/UserControls/YearAttendanceControl.xaml
+++ b/VulcanForWindows/UserControls/YearAttendanceControl.xaml
@@ -1,16 +1,11 @@
-﻿<Page
-    x:Class="VulcanForWindows.MonthsAttendancePage"
+﻿<UserControl
+    x:Class="VulcanForWindows.UserControls.YearAttendanceControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VulcanForWindows"
+    xmlns:local="using:VulcanForWindows.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:VulcanForWindows.UserControls"
     mc:Ignorable="d">
 
-    <Grid>
-        <ListView SelectionMode="None">
-        <controls:YearAttendanceControl/>
-        </ListView>
-    </Grid>
-</Page>
+    <Grid x:Name="Container" HorizontalAlignment="Center"/>
+</UserControl>
