Dodano komunikacje między bg workerem a aplikacją. Dodano tryb debugowania do bg workera

--- a/VulcanForWindows/UserControls/Settings/BackgroundTaskSettings.xaml
+++ b/VulcanForWindows/UserControls/Settings/BackgroundTaskSettings.xaml
@@ -14,6 +14,7 @@
         </Expander.Header>
         <Expander.Content>
             <StackPanel HorizontalAlignment="Stretch">
+                <scontrols:BackgroundTaskSetting DisplayName="Tryb debugowania" PreferencesName="DebugMode" HorizontalAlignment="Stretch" NumFieldVisibility="Collapsed"/>
                 <scontrols:BackgroundTaskSetting DisplayName="Odświeżanie ocen" PreferencesName="GradesUpdateInterval" HorizontalAlignment="Stretch"/>
             </StackPanel>
         </Expander.Content>
