--- a/VulcanForWindows/MainPanelPage.xaml
+++ b/VulcanForWindows/MainPanelPage.xaml
@@ -46,8 +46,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Image Source="C:\Users\Marcel\Desktop\SchoolBg.png" 
-               VerticalAlignment="Top" HorizontalAlignment="Stretch" Stretch="UniformToFill"/>
+            <!--<Image Source="C:\Users\Marcel\Desktop\SchoolBg.png" 
+               VerticalAlignment="Top" HorizontalAlignment="Stretch" Stretch="UniformToFill"/>-->
             <!--<Rectangle HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="800">
             <Rectangle.Fill>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
@@ -57,7 +57,7 @@
             </Rectangle.Fill>
         </Rectangle>-->
         </Grid>
-        <VariableSizedWrapGrid Orientation="Vertical" ItemHeight="32" ItemWidth="100" Margin="5,200,5,5">
+        <VariableSizedWrapGrid Orientation="Vertical" ItemHeight="32" ItemWidth="100" MaxHeight="600" Margin="10">
             <Grid Style="{StaticResource Panel}" x:Name="GradesPanel" 
               VariableSizedWrapGrid.ColumnSpan="4" VariableSizedWrapGrid.RowSpan="8">
                 <Grid.RowDefinitions>
